--- a/static/base.css
+++ b/static/base.css
@@ -102,6 +102,7 @@
 html,
 body {
 	width: 100%;
+	height: 100%;
 	overflow-x: hidden;
 }
 
@@ -111,6 +112,11 @@ html {
 
 html.hide-overflow {
 	overflow: hidden;
+}
+
+body {
+	display: flex;
+	flex-flow: column;
 }
 
 ::-webkit-scrollbar-track {
@@ -153,8 +159,8 @@ html.hide-overflow {
 	--h1: 56px;
 	--h1-lh: 68px;
 
-	/* --h2: 38px;
-    --h2-lh: 42px; */
+	--h2: 38px;
+    --h2-lh: 42px;
 
 	/* --h3: 30px;
     --h3-lh: 36px; */
