--- a/static/base.css
+++ b/static/base.css
@@ -212,6 +212,7 @@ body {
 	--grey-600: hsl(0, 0%, 20%);
 	--grey-550: hsl(0, 0%, 25%);
 	--grey-500: hsl(0, 0%, 36%);
+	--grey-450: hsl(0, 0%, 42%);
 	--grey-400: hsl(0, 0%, 58%);
 	--grey-300: hsl(0, 0%, 77%);
 	--grey-100: hsl(0, 0%, 94%);
@@ -286,7 +287,7 @@ a {
 
 button:focus,
 a:focus {
-	outline: var(--primary-400) dotted 1.5px;
+	outline: var(--grey-400) dotted 1.5px;
 }
 
 button:disabled {
@@ -304,7 +305,7 @@ button span {
 }
 
 .focus-grey:focus {
-	outline: var(--grey-300) dotted 1.5px;
+	outline: var(--grey-400) dotted 1.5px;
 }
 
 .focus-primary:focus {
